objects/Archive_Account_History__c.object
<CustomObject>
    <description>Archived Account history changes related to Account names</description>
    <fields>
        <fullName>Account_History_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account History Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Archive Account History</relationshipLabel>
        <relationshipName>Archive_Account_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>Archive Account History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Field__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>H-{0000000}</displayFormat>
        <label>Archive Account History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Account History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>